@@ -1074,6 +1074,9 @@ static gboolean check_vte(GdkModifierType state, guint keyval)
 	GeanyKeyGroup *group;
 	GtkWidget *widget;
 
+	/* let VTE copy/paste override any user keybinding */
+	if (state == (GDK_CONTROL_MASK | GDK_SHIFT_MASK) && (keyval == GDK_c || keyval == GDK_v))
+		return TRUE;
 	if (! vc->enable_bash_keys)
 		return FALSE;
 	if (gtk_window_get_focus(GTK_WINDOW(main_widgets.window)) != vc->vte)
@@ -1083,9 +1086,6 @@ static gboolean check_vte(GdkModifierType state, guint keyval)
 		return FALSE;
 	if (state == 0 && (keyval < GDK_F1 || keyval > GDK_F35))	/* e.g. backspace */
 		return FALSE;
-	/* let VTE copy/paste override any user keybinding */
-	if (state == (GDK_CONTROL_MASK | GDK_SHIFT_MASK) && (keyval == GDK_c || keyval == GDK_v))
-		return TRUE;
 
 	/* make focus commands override any bash commands */
 	group = g_ptr_array_index(keybinding_groups, GEANY_KEY_GROUP_FOCUS);
