@@ -5,6 +5,9 @@
  * src/keybindings.c, src/vte.c:
    Add fixed shortcuts for VTE copy (Ctrl-Shift-C) and paste
    (Ctrl-Shift-V).
+ * src/keybindings.c:
+   Make VTE copy/paste shortcuts work if 'Override Geany
+   keybindings' is not set.
 
 
 2011-03-24  Colomban Wendling  <colomban(at)geany(dot)org>
